# the-real-mle-challenge-fernando

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: github-CICD.yaml
container/: Dockerfile
data/dvc/processed/: .gitignore
evaluation/graphs/: .gitignore
src/: config.py
src/serving/: api.py  data_models.py
src/training/: evaluation.py  fitting.py  preprocessing.py
tests/: test_processing.py  test_training.py
