[tool.poetry]
name = "the-real-mle-challenge"
version = "0.1.0"
description = "In this challenge, we will explore the use of Airbnb listing data to predict the price category for new listings. We want to represent a real-case scenario where the MLE is working hand-to-hand with the Data Scientists at Intelygenz."
authors = ["Fernando Hernandez Gant"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
pydantic = "^2.5.3"
cloudpickle = "^3.0.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.training.dependencies]
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
click = "^8.1.7"
dvc = "^3.39.0"

[tool.poetry.group.serving.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
